manifests/service.yaml
# php-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
  labels:
    app: php-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: php-app
