manifests/route.yaml
# php-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: php-route
spec:
  to:
    kind: Service
    name: php-service
  port:
    targetPort: 8080
